# SmartObject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
SmartObject/: SmartDefine.h  SmartObject.cpp  SmartObject.h  SmartPointer.cpp  SmartPointer.h
TypeWrapper/: TypeWrapper.h
